# Eve

./: .gitignore  CMakeLists.txt  COPYING  Eve.dynamic.pro  Eve.pro  Eve.static.pro  QtSimplePlayer.pro  backend.cpp  backend.h  config.h  config.h.in  experiment.cpp  experiment.h  experiment.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  marsandbox.pro  tagger.cpp  tagger.h  tagger.ui  transport.cpp  transport.h  transport.ui  tutorial.pro
CliPlayer/: main.cpp
QtSimplePlayer/: backend.cpp  backend.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
backend/: backend.cpp
mainwindow/: mainwindow.h
sql/: sqlite.sql
src/: CMakeLists.txt  backend.cpp  backend.h  config.h.in  experiment.cpp  experiment.h  experiment.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tagger.cpp  tagger.h  tagger.ui  transport.cpp  transport.h  transport.ui  userinterface.cpp  userinterface.h  userinterface.ui  util.cpp  util.h  wizard.ui
transport/: transport.ui
